First working version of directive

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,5 @@
 <p>This cannot be toggled</p>
-<div pw-feature-toggle/>
-
+<div pw-feature-toggle="feature1">Feature 1</div>
+<div pw-feature-toggle="feature2">Feature 2</div>
+<div pw-feature-toggle="feature3">Feature 3</div>
+<img src="http://lorempixel.com/400/200/" pw-feature-toggle="image"></img>
